[package]
name = "webgl-wrapper"
version = "0.1.0"
authors = ["Nathan Stoddard <nstoddard@users.noreply.github.com>"]
edition = "2018"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2.40"
log = "0.4.6"
cgmath = { git = "https://github.com/rustgd/cgmath", features = ["serde"] }
serde = { version = "1.0.90", features = ["derive"] }
num-traits = "0.2.6"
uid = "0.1.4"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "WebGl2RenderingContext",
  "WebGlShader",
  "WebGlProgram",
  "WebGlBuffer",
  "WebGlVertexArrayObject",
  "WebGlUniformLocation",
  "WebGlTexture",
  "WebGlFramebuffer",
  "WebGlContextAttributes",
  "WebGlRenderbuffer",
  "HtmlImageElement",
]
